Fix position:fixed on safari

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -269,6 +269,7 @@ select {
         width: 300px;
         max-width: 100%;
         height: 100%;
+        top: 0;
         -moz-transition: all 0.4s;
         -webkit-transition: all 0.4s;
         transition: all 0.4s;
